--- a/CSS/style10.css
+++ b/CSS/style10.css
@@ -152,7 +152,7 @@ border-radius: 8px;
     .bar .d-flex{
         display: flex;
         width: 100%;
-                
+        transition: all 0.2s ease-in-out;  
             }
     .d-flex .form-control{
         display: flex;
@@ -165,7 +165,7 @@ font-size: 2vh;
 
 border-radius: 1vh;
 border:none;
-transition: 0.2s;
+transition: all 0.2s ease-in-out;
  
 
 
@@ -175,6 +175,7 @@ transition: 0.2s;
         padding: 2vh;
        outline-color:rgba(194, 219, 254, 1);
        border:0.2vh solid #86B7FE;
+       transition: all 0.2s ease-in-out;
     }
    
    
@@ -394,23 +395,30 @@ align-items: center;
 width: 90%;
 height: 100%;
 
-overflow: hidden;
-scroll-behavior: smooth;
+
+
    }
    .put-cards .slider{
 display: flex;
-justify-content: space-around;
-margin-top: 5%;
-width: 300%;
-height: 75%;
-background-color: white;
+flex-direction: column;
+justify-content: center;
+flex-wrap: wrap;
+align-items: center;
+margin-top: 2.5%;
+width: 100%;
+height: 85%;
+overflow: hidden;
+scroll-behavior:smooth ;
+
    }
    .slider .cards
    {
     display: flex;
 flex-direction: column;
+margin-left: 1%;
+margin-right: 1%;
 width: 22vh;
-height: 100%;
+height: 95%;
 border: solid #A6A6A6;
    }
    .cards .container-producto{
@@ -448,7 +456,8 @@ height: 100%;
 display: flex;
 width: 100%;
 height: 10%;
-
+justify-content: center;
+align-items: center;
 font-family: hatton;
 font-size: 1.2vh;
 text-align: center;
@@ -1097,6 +1106,7 @@ scroll-behavior: smooth;
    .put-cards .slider{
 display: flex;
 align-items: center;
+flex-direction: row;
 justify-content: space-evenly;
 flex-wrap: wrap;
 
