--- a/CSS/style14.css
+++ b/CSS/style14.css
@@ -8,6 +8,75 @@ body{
         font-family:hatton;
         src: url(../fuentes/PP\ Hatton\ Medium\ 500.otf);
                }
+               .container-alerta{
+                display: flex;
+                width: 100vw;
+                height: 17vh;
+                position: fixed;
+                
+                align-items: center;
+                justify-content: center;
+                opacity: 0;
+                pointer-events: none;
+                
+                transition: 1.0s;
+                
+                
+                               }
+                               .container-alerta .alerta{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 30vw;
+                height: 90%;
+                background-color: white;
+                border: solid #268ecd;
+                border-radius: 2vw;
+                transition: 1.0s;
+                
+                
+                
+                               }
+                               .alerta .contenido-alerta{
+                display: flex;
+                align-items: center;
+                
+                width: 90%;
+                height: 80%;
+                
+                
+                
+                               }
+                               .contenido-alerta .alert-image{
+                                display: flex;
+                width: 30%;
+                height: 80%;
+                
+                
+                
+                               }
+                               .alert-image .perro-alerta{
+                width: 100%;
+                height: 100%;
+                
+                               }
+                               .contenido-alerta .text-alert{
+                                display: flex;
+                width: 70%;
+                height: 80%;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                font-family: hatton;
+                font-size: 1.5vw;
+                               }
+                               .ocultar{
+                                opacity: 1;
+                                pointer-events: none;
+                                
+                                
+                                
+                                               }
              
     .maincontainer{
         display: flex;
@@ -388,6 +457,7 @@ background-color: darkgray;
     
     
         }
+       
         .example_1 .sub_form_class{
     display: flex;
     justify-content: center;
@@ -424,7 +494,9 @@ background-color: darkgray;
             display: flex;
             width: 35%;
             height: 80%;
-     
+     font-size: 1.5vw;
+     font-family: hatton;
+     align-items: center;
             border: solid #268ecd;
             margin: 5px;
             
@@ -467,17 +539,20 @@ background-color: darkgray;
         } .container_form_internal .container_final_buttons{
     display: flex;
     justify-content: end;
+    
     width: 100%;
     height: 100%;
     
     
     
         }
+     
         .container_final_buttons .middle_butons{
             display: flex;
         justify-content: end;
             width: 100%;
             height: 100%;
+            
           
     
     
@@ -488,9 +563,57 @@ background-color: darkgray;
             display: flex;
     width: 10%;
     height: 100%;
-    
+
     flex-direction: column-reverse;
     
+        }
+        .end_b .text-label{
+            display: flex;
+            
+          
+text-align: center;
+font-family: hatton;
+font-size: 0.8vw;
+transition: 0.5s;
+cursor: pointer;
+
+        }
+        .text-label:hover{
+color: orange;
+
+
+        }
+        .end_b .bad-input{
+            position: absolute;
+display: flex;
+width: 0.5%;
+height: 0.5%;
+opacity: 0;
+pointer-events: none;
+
+
+        }
+        .end_b .create-upload{
+            display: flex;
+            color: orange;
+            justify-content: center;
+            align-items: center;
+            font-size: 3vw;
+            cursor: pointer;
+width: 4vw;
+height: 4vw;
+border-radius: 50%;
+background-color: #268ecd;
+align-self: center;
+margin-bottom: 10%;
+transition: 0.5s;
+
+        }
+        .create-upload:hover{
+background-color: orange;
+color: #268ecd;
+
+
         }
         .dentro_buttons{
             display: flex;
